05-ci-cd/10-multi-region-blue-green-orchestrator/manifests/service-active.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-service-live
  labels:
    app: order-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      name: http
  selector:
    app: order-service
    color: blue # Dynamic pointer: patched from 'blue' to 'green' during traffic switch
